--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 - New architecture
 - Recursive types (join type / property class)
+- Enumerations
 - Decorators
 - Types of values (list of exports, list of exported values, list of exported types)
 - Find a specific export
