--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,14 @@
+- Primitive types should not be references.
+
 INTEGRATION
 - Import from JSON (create static typename property)
 - Types of values (list of exports, list of exported values, list of exported types)
 - Find a specific export
 - Simple tests
+- Validate recursive types with a WeakMap to store already validated items
 
 FUTURE
+- Pretty ids (double-id mapping)
 - Generics
 - Generics validation
 - Heavy tests
@@ -13,3 +17,4 @@ FUTURE
 - Namespace declarations
 - Template literals advanced (with validation)
 - Extending primitive types with additional properties
+- Add parameters name to function signatures
