--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
-- Validate generics (based on constraints + several types sharing a generic must be compatible)
-- Redo classes (instance properties + static properties + constructor)
+- Fix bugs brought by generics
 - Built-in promises
+- Redo classes (instance properties + static properties + constructor)
+- Validate generics (based on constraints + several types sharing a generic must be compatible)
 - Documentation
 - CI/CD
 
